src/components/header/style.css
.header {
  position: fixed;
  z-index: 1000;
  width: 100%;
  background-color: var(--header-bg);
  box-shadow: 70px 17px 62px rgba(0, 0, 0, 0.1);
}

.main-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 5rem;
}

.main-nav__logo {
  max-width: fit-content;
}

.main-nav__logo:focus {
  border: none;
  outline: none;
  box-shadow: var(--box-shadow);
}

.main-nav__logo:hover .logo__name {
  color: var(--light-blue-100);
  transition: color 0.3s ease-in;
}

.main-nav__logo:hover .logo__name--second {
  color: var(--white);
  opacity: 0.8;
  transition: color 0.3s ease-in;
}

.main-nav__row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  column-gap: 2rem;
  row-gap: 1rem;
  flex-wrap: wrap;
}

.nav-list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.nav-list__link {
  position: relative;
  display: inline-block;
  padding: 2.2rem 3rem;
  font-size: 1.6rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 1px;
  line-height: inherit;
  color: var(--light-blue-100);
  transition: color .3s;
}

.nav-list__link:hover {
  color: var(--light-blue-200);
  transition: color 0.5s ease-in;
}

.nav-list__link:focus {
  text-shadow: 1px 0 0,.3px 0 0;
}

.nav-list__link::before {
  content: '';
  position: absolute;
  left: 15px;
  bottom: 10px;
  width: 76%;
  height: 3px;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform .3s ease-in-out;
  background-color: var(--light-blue-200);
}

.nav-list__link:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.nav-list__link--active {
  position: relative;
}

.nav-list__link--active::before {
  background-color: var(--light-blue-100);;
  transform: none;
}

.nav__toggler div {
  width: 3rem;
  height: 3px;
  margin: 5px;
  background-color: var(--light-blue-100);
  transition: all .5s ease-in;
}

.nav__toggler {
  display: none;
  cursor: pointer;
}

.nav-list__active {
  transform: translateX(0);
}

/* Toggle burger menu line animation*/

.toggle .line1 {
  transform: rotate(-45deg) translate(-4px, 5px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  transform: rotate(45deg) translate(-4px, -5px);
}

@media only screen and (max-width: 56.25em) {
  .main-nav {
    padding: 2rem 2rem;
  }

  .nav__toggler {
    display: block;
    width: 35px;
    height: 35px;
  }

  .nav-list {
    z-index: 5;
    position: fixed;
    top: 73px;
    right: 0;
    width: 100%;
    display: block;
    text-align: right;
    background-color: var(--header-bg);
    transform: translateX(100%);
    transition: 0.5s ease-in;
  }

  .nav-list__link:first-child {
    border-top: 1px solid #eee;
  }

  .nav-list__link::before {
    display: none;
  }

  .nav-list__link {
    display: flex;
    justify-content: flex-end;
    padding: 2.5rem 3rem;
    font-size: 1.8rem;
    border-bottom: 1px solid #eee;
  }


  .nav-list.nav-list__active {
    transform: translateX(0);
  }

  .nav-list__link--active::before {
    display: none;
  }
}

@media only screen and (max-width: 26.25em) {
  .nav-list {
    top: 105px;
  }
}

